SubVersion: $Id$

To do: 
	- USB pass-thru support
	- bug with API mode (Linux & Windows): may not work with some calcs ?!
	- ioports.c to improve

Log:

- 24/04/2004, version 3.8.4: roms
	Added buffered write support to the SilverLink / Win32 module. Driver 3.0.2.1 
	is needed. Tested with various transfers.

- 21/04/2004, version 3.8.3: roms
	Added full/partial BUFFERED_W (heuristic) support to get the best of
	both worlds ! Tested with group, idlist, clock, backup, 
	FLASH apps (s/r), ROM dump and FLASH os.
	This really speed-up FLASH app transfer (sending).
	Done the same work for tiglusb kernel module support. This stuff will 
	be moved into the module later...
	
- 17/04/2004, version 3.8.2: roms
	Bug in lib-usb support: wrong timeout passed to libusb (1/10 of
	value) => short timeout !
	Discovered the same bug in tipar/tiser/tiusb kernel module !

	Note: USB support default behaviour is: BUFFERED_R=1 & BUFFERED_W=0.
	Using BUFFERED_W make FLASH sending faster but communication is less 
	reliable.
	
- 08/04/2004, version 3.8.1: roms
	Redirection of stdout/stderr.
	Weird: we were using tilp/ticable.h. It should be linux/ticable.h.
	In fact, modules use tilp/ but built-in uses linux/.
	Modules will be modified to linux/.
	
- 22/03/2004, version 3.8.0: roms
	Splitted sources according to target and cables.
	Tested under Linux with:
	- GreyLink: api: ok
	- BlackLink: asm: ok, ioctl: ok, module: ?? 
	- SilverLink: ioctl: ok, module: ok
	- Parallel: asm: ??, module: ??
	Wake-up sequence removed from serial & parallel cables because it 
	perturbates communication start-up.
	
	Beware: Mac OS-X support has been moved to the new architecture but 
	has not been compiled !!!

	Bug in serial link support (mode asm: no timeout on ser_get).
	Bug in parallel link support (mode asm: no timeout on par_get).

	Added ability to immediately flush log file to disk.
	
- 01/03/2004, version 3.7.9: tijl
	BSD usb fix in libticables

- 01/10/2003, version 3.7.8: tijl