@@ -7,9 +7,12 @@ To do:
 
 Log:
 
+- 05/05/2004, version 3.8.5: roms
+	Bug fix in the verbose.c compatibility support (DISPLAY).
+	
 - 24/04/2004, version 3.8.4: roms
-	Added buffered write support to the SilverLink / Win32 module. Driver 3.0.2.1 
-	is needed. Tested with various transfers.
+	Added buffered write support to the SilverLink / Win32 module. 
+	Driver 3.0.2.1 is needed. Tested with various transfers.
 
 - 21/04/2004, version 3.8.3: roms
 	Added full/partial BUFFERED_W (heuristic) support to get the best of
